<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">News App</string>
    <string name="action_settings">Settings</string>
    <string name="dummy_news">Marvel Studios has released a new Black Panther international poster.</string>
    <string name="dummy_news_black_panther">Black Panther will be kicking off the 2018 year in Marvel Studios movies; it will be followed by the massive crossover event of Avengers: Infinity War in May, and Ant-Man and the Wasp in July. Judging by the recent Avengers: Infinity War trailer, the events of Black Panther will have major impact on the larger MCU. There\'s increasing likelihood that the final Infinity Stone (the Soul Stone) is actually the heart of Black Panther\'s homeland, Wakanda\'s, prosperity. The African nation will the setting for the big "Battle of Wakanda" in Infinity War, with many of the Black Panther characters pictured above making their second Marvel Cinematic Universe appearance.Avengers: Infinity War opens in theaters on May 4, 2018. Thor: Ragnarok is now playing in theaters. Other upcoming Marvel Cinematic Universe movies include; Black Panther on February 16, 2018, Ant-Man and the Wasp on July 6, 2018, Captain Marvel on March 8, 2019, the fourth Avengers movie on May 3, 2019, the sequel to Spider-Man: Homecoming on July 5, 2019, and Guardians of the Galaxy Vol. 3 in 2020.Black Panther stars Chadwick Boseman (Get on Up), Michael B. Jordan (Creed), Lupita Nyong’o (Star Wars: The Force Awakens), Danai Gurira (The Walking Dead), Martin Freeman (Sherlock), Daniel Kaluuya (Get Out), with Angela Bassett (American Horror Story), with Forest Whitaker (Rogue One: A Star Wars Story), and Andy Serkis (Avengers: Age of Ultron). Additional cast members include Letitia Wright (Urban Hymn), Winston Duke (Modern Family), Florence Kasumba (Emerald City), Sterling K. Brown (The People v. O.J. Simpson) and John Kani (Coriolanus).</string>
    <string name="news_by_category_title">News by Category</string>

    <string name="sports_news_detail01">Manchester United offer £25m for Alexis Sánchez in attempt to hijack City deal</string>
    <string name="sports_news_detail02">UEFA Reveal 2017 Champions League Team of the Year as Chosen by 8.8m Fan Votes</string>
    <string name="sports_news_detail03">Premier League questions: How will Liverpool fare without Philippe Coutinho? Another record for Harry Kane?</string>
    <string name="sports_news_detail04">Manchester City have not beaten Liverpool at Anfield in the Premier League since 2003</string>

    <string name="international_news_heading_big">Donald Trump/</string>
    <string name="international_news_detail_big">Trump reverses stance on surveillance law in series of contradicting tweets</string>
    <string name="international_news_medium_one">Fragments of book recovered from wreck of Blackbeard\'s ship</string>
    <string name="international_news_medium_two">Partying runs through everything: the roots of Manchester\’s reggae scene</string>
    <string name="international_news_small_1">I can\’t describe my feeling : Saudi women finally allowed into games</string>
    <string name="international_news_small_2">David Letterman\'s comeback: can his Netflix show take him back to the top?</string>
    <string name="international_news_small_3">California in revolt: how the progressive state plans to foil the Trump agenda</string>


    <string name="title_all_news">All News</string>
    <string name="menu_all_news">All News</string>
    <string name="menu_news_by_category">News by Category</string>

    <string name="lbl_to_register"> <i><u>Register</u></i> </string>
    <string name="lbl_to_login"><i><u>Login</u></i> </string>

    <string name="btn_forgot_password"><i><u>Forgot Password</u></i></string>

    <string name="lbl_logout">Logout</string>

    <string name="msg_to_exit"><b><xliff:g id="name">%1$s</xliff:g></b>, Are you sure to exit MM-News</string>

</resources>
