<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_news_type"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="8dp"
            android:src="@drawable/fired" />

        <TextView
            android:id="@+id/tv_sports_news_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/iv_news_type"
            android:layout_toEndOf="@+id/iv_news_type"
            android:padding="8dp"
            android:text="Top News"
            android:textColor="@color/primary_text"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/iv_sports_news_image_big"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@id/tv_sports_news_heading"
            android:scaleType="centerCrop"
            android:src="@drawable/sports_news" />

        <TextView
            android:id="@+id/tv_sports_news_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_sports_news_image_big"
            android:padding="8dp"
            android:text="@string/sports_news_detail01"
            android:textColor="@color/primary_text"
            android:textSize="24dp" />

        <TextView
            android:id="@+id/divider01"
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_below="@id/tv_sports_news_detail"
            android:layout_marginTop="8dp"
            android:background="@color/divider" />

        <LinearLayout
            android:id="@+id/ll_sports_news_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider01"
            android:layout_margin="8dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_soprts_news_01"
                android:layout_width="@dimen/sports_news_image_width"
                android:layout_height="@dimen/sports_news_image_height"
                android:layout_weight="1"
                android:scaleType="fitXY"
                android:src="@drawable/uefa_champions_league" />

            <TextView
                android:id="@+id/tv_sports_news_01_detail"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLines="3"
                android:padding="8dp"
                android:text="@string/sports_news_detail02"
                android:textColor="@color/primary_text"
                android:textSize="18dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/divider02"
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_below="@id/ll_sports_news_1"
            android:background="@color/divider" />

        <LinearLayout
            android:id="@+id/ll_sports_news_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider02"
            android:layout_margin="8dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_soprts_news_02"
                android:layout_width="@dimen/sports_news_image_width"
                android:layout_height="@dimen/sports_news_image_height"
                android:layout_weight="1"
                android:scaleType="fitXY"
                android:src="@drawable/coutinho" />

            <TextView
                android:id="@+id/tv_sports_news_02_detail"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLines="3"
                android:padding="8dp"
                android:text="@string/sports_news_detail03"
                android:textColor="@color/primary_text"
                android:textSize="18dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/divider03"
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_below="@id/ll_sports_news_2"
            android:background="@color/divider" />

        <LinearLayout
            android:id="@+id/ll_sports_news_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider03"
            android:layout_margin="8dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_soprts_news_03"
                android:layout_width="@dimen/sports_news_image_width"
                android:layout_height="@dimen/sports_news_image_height"
                android:layout_weight="1"
                android:scaleType="fitXY"
                android:src="@drawable/skysports" />

            <TextView
                android:id="@+id/tv_sports_news_03_detail"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLines="3"
                android:padding="8dp"
                android:text="@string/sports_news_detail04"
                android:textColor="@color/primary_text"
                android:textSize="18dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/divider04"
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_below="@id/ll_sports_news_2"
            android:background="@color/divider" />

    </RelativeLayout>

</android.support.v7.widget.CardView>


